# dotfiles

./: .bash_aliases  .bashrc  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .tmux.conf  .yamlfmt.yaml  .yapf.style  README.md  bootstrap.py  cpplint.py  install-remote.sh  install.bash  install.sh  install_darwin.sh  install_ubuntu.bash  pylint.rc  setup.sh  test.sh
.atom/: config.cson
.vim/: vimrc
activity_watch/: dotfile_manager.yaml  install_macos.sh  install_ubuntu.sh
alacritty/: alacritty.toml  alacritty.yml  dotfile_manager.yaml  install_macos.sh  install_ubuntu.sh  symlink.yaml
atuin/: config.toml  dotfile_manager.yaml  install.sh
bash/: bashrc.bash  dotfile_manager.yaml
bazel/: bazel_cleanup_cache.sh  bazel_regex.sh  bazel_visualize.sh  bazel_visualize_rdeps.sh  dotfile_manager.yaml  helpers.sh  install_ubuntu.sh
brew/: dotfile_manager.yaml  install.sh
cron/: crontab  dotfile_manager.yaml  run_as_cron.sh
cursor/: dotfile_manager.yaml  install.sh
docker/: helpers.sh
dropbox/: install_ubuntu.sh
gdb/: bazel_gdb.sh  dotfile_manager.yaml
gdm/: update_global_monitors_configuration.sh
general/: catkin_helpers.sh  create_catkin_compile_commands.sh  git_helpers.sh  install_ros.sh
gerrit/: run_gerrit_stats.sh
git/helpers/git_stack/: README.md  git_helpers.py  git_hosting_client.py  git_stack.py  pyproject.toml  test_git_stack.py
git/helpers/git_stack/src/git_stack/: __init__.py  change_id.py  cli.py  hosting_client.py  stack.py
git/helpers/git_stack/tests/: __init__.py  conftest.py  test_stack.py
i3/: config  (+5 more)
(+189 files in other folders)
